Changes in mirt 0.8.3

NEW FEATURES

- lognormal priors may now be passed to parprior

- iterative computations in fscores() can now be run in parallel automatically following a 
  mirtCluster() definition

- mirtCluster() function added to make utilizing parallel cores more convenient. Globally removed
  the cl argument for multi-core objects

- confmirt.model() supports the so-called Q-matrix input format, along with a matrix input for the
  covariance terms

- updated documentation for data sets by adding relevant examples, and added Bock1997 data set
  for replicating table 3 in van der Linden, W. J. & Hambleton, R. K.'s (1997)
  Handbook of modern item response theory

BUG FIXES

- WLE estimation fixed and now estimates extreme response patterns

- exploratory starting values no longer crash in datasets with a huge number of NA's, which caused 
  standard deviations to be zero

- math fix for beta priors

Changes in mirt 0.8.0

NEW FEATURES

- support for random effect predictors now available in mixedmirt(), along with a randef() function
  for computing MAP predictions for the random parameters

- EAPsum support in fscores() for mixed item types

- for consistency with current IRT software (rather than TESTFACT and POLYFACT), the scaling 
  constant has been set to D = 1 and fixed at this value

- nominal.highlow option added to specify which categories are the highest and lowest in nominal models.
  Often provide better numerical stability when utilized. Default is still to use the highest and lowest 
  categories

- increase number of draws in the Monte Carlo calculation of the log-likelihood from 3000 to 5000

- when itemtype all equal 'Rasch' or 'rsm' models the latent variance parameter(s) are automatically 
  freed and estimated

- mixedmirt() more supportive of user defined R formulas, and now includes an internal 'items'
  argument to create the item design matrix used to estimate the intercepts. More closely mirrors 